--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^2.32.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
