--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
-    "@supabase/supabase-js": "^2.32.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@supabase/supabase-js": "^2.33.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
